updating app.properties to match scripts

--- a/VersaLex/jsonVersalexRestAPI/tools/HarmonyCSVToJSON/app.properties
+++ b/VersaLex/jsonVersalexRestAPI/tools/HarmonyCSVToJSON/app.properties
@@ -1,4 +1,4 @@
 #file path for input CSV file
-groupFile=C:\\temp\\UserGroup.csv
-mailBoxFile=C:\\temp\\UserMailbox.csv
-jsonFile=C:\\temp\\result.json
+groupFile=C:\\profilebuildertool\\UserGroup.csv
+mailBoxFile=C:\\profilebuildertool\\UserMailbox.csv
+jsonFile=C:\\profilebuildertool\\result.json
